<resources>
    <string name="About.appName.android">EACTALK</string>
    <string name="About.blog">Website</string>
    <string name="About.footer">Made by the EacTalk DEV Team\n%1$s</string>
    <string name="About.privacy">Privacy Policy</string>
    <string name="About.reddit">Reddit</string>
    <string name="About.title">About</string>
    <string name="About.twitter">Twitter</string>
    <string name="AccessibilityLabels.close">Close</string>
    <string name="Alert.error">Error</string>
    <string name="Alert.keystore.generic.android">There is a problem with your Android OS keystore, please contact dev@eacpay.com</string>
    <string name="Alert.keystore.invalidated.android">Your Bread encrypted data was recently invalidated because your Android lock screen was disabled.</string>
    <string name="Alert.keystore.title.android">Android KeyStore Error</string>
    <string name="Alerts.pinSet">PIN Set</string>
    <string name="Alerts.sendFailure">Send failed</string>
    <string name="Alerts.sendSuccess">Send Confirmation</string>
    <string name="Alerts.sendSuccessSubheader">Money Sent!</string>
    <string name="Alerts.touchIdSucceeded.android">Fingerprint recognized</string>
    <string name="BCH.body">Enter a destination BCH address below. All BCH in your wallet at the time of the fork (%1$s) will be sent.</string>
    <string name="BCH.confirmationTitle">Confirmation</string>
    <string name="BCH.genericError">Your account does not contain any BCH, or you received BCH after the fork.</string>
    <string name="BCH.hashCopiedMessage">Transaction ID copied</string>
    <string name="BCH.title">Withdraw BCH</string>
    <string name="BCH.txHashHeader">BCH Transaction ID</string>
    <string name="Button.cancel">Cancel</string>
    <string name="Button.ok">OK</string>
    <string name="Button.send">send</string>
    <string name="Confirmation.amountLabel">Amount to Send:</string>
    <string name="Confirmation.feeLabel">Network Fee:</string>
    <string name="Confirmation.to">To</string>
    <string name="Confirmation.totalLabel">Total Cost:</string>
    <string name="ConfirmPaperPhrase.word">Word #%1$s</string>
    <string name="DefaultCurrency.litecoinLabel">Earthcoin Display Unit</string>
    <string name="DefaultCurrency.rateLabel">Exchange Rate</string>
    <string name="ErrorMessages.loopingLockScreen.android">EacTalk can not be authenticated due to a bug in your version of Android. [Please tap here for more information.]</string>
    <string name="ErrorMessages.touchIdFailed.android">Fingerprint not recognized. Please try again.</string>
    <string name="FeeSelector.economy">Economy</string>
    <string name="FeeSelector.economyTime">10+ minutes</string>
    <string name="FeeSelector.economyWarning">This option is not recommended for time-sensitive transactions.</string>
    <string name="FeeSelector.estimatedDeliver">Estimated Delivery: %1$s</string>
    <string name="FeeSelector.regular">Regular</string>
    <string name="FeeSelector.regularTime">2.5 - 5+ minutes</string>
    <string name="FeeSelector.title">Processing Speed</string>
    <string name="Import.checking">Checking private key balance...</string>
    <string name="Import.confirm">Send %1$s from this private key into your wallet? The Earthcoin network will receive a fee of %2$s.</string>
    <string name="Import.Error.empty">This private key is empty.</string>
    <string name="Import.Error.notValid">Not a valid private key</string>
    <string name="Import.Error.signing">Error signing transaction</string>
    <string name="Import.message">Importing a wallet transfers all the money from your other wallet into your EACTALK using a single transaction.</string>
    <string name="Import.password">This private key is password protected.</string>
    <string name="Import.scan">Scan Private Key</string>
    <string name="Import.success">Success</string>
    <string name="Import.warning">Importing a wallet does not include transaction history or other details.</string>
    <string name="JailbreakWarnings.ignore">Ignore</string>
    <string name="JailbreakWarnings.title">WARNING</string>
    <string name="ManageWallet.creationDatePrefix">You created your wallet on %1$s</string>
    <string name="MenuButton.buy">Buy</string>
    <string name="MenuButton.lock">Lock Wallet</string>
    <string name="MenuButton.security">Security Center</string>
    <string name="MenuButton.settings">Settings</string>
    <string name="MenuViewController.modalTitle">Menu</string>
    <string name="NodeSelector.automaticButton">Switch to Automatic Mode</string>
    <string name="NodeSelector.connected">Connected</string>
    <string name="NodeSelector.enterBody">Enter Node IP address and port (optional)</string>
    <string name="NodeSelector.enterTitle">Enter Node</string>
    <string name="NodeSelector.manualButton">Switch to Manual Mode</string>
    <string name="NodeSelector.nodeLabel">Current Primary Node</string>
    <string name="NodeSelector.notConnected">Not Connected</string>
    <string name="NodeSelector.statusLabel">Node Connection Status</string>
    <string name="NodeSelector.title">Earthcoin Nodes</string>
    <string name="PaymentProtocol.Errors.badPaymentRequest">Bad Payment Request</string>
    <string name="PaymentProtocol.Errors.corruptedDocument">Unsupported or corrupted document</string>
    <string name="PaymentProtocol.Errors.requestExpired">request expired</string>
    <string name="PaymentProtocol.Errors.smallPayment">Earthcoin payments can\'t be less than %1$s.</string>
    <string name="PaymentProtocol.Errors.smallTransaction">Earthcoin transaction outputs can\'t be less than %1$s.</string>
    <string name="PaymentProtocol.Errors.untrustedCertificate">untrusted certificate</string>
    <string name="Prompts.NoScreenLock.body.android">A device screen lock is needed to safeguard your wallet. Go to \"Settings\" &gt; \"Security\" &gt; \"Screen lock\" and enable to continue.</string>
    <string name="Prompts.PaperKey.body">Your Paper Key must be saved in case you ever lose or change your phone. Tap here to continue.</string>
    <string name="Prompts.PaperKey.title">Action Required</string>
    <string name="Prompts.RecommendRescan.body">Your wallet may be out of sync. This can often be fixed by rescanning the blockchain.</string>
    <string name="Prompts.RecommendRescan.title">Transaction Rejected</string>
    <string name="Prompts.ShareData.body">Help improve EACTALK by sharing your anonymous data with us</string>
    <string name="Prompts.ShareData.title">Share Anonymous Data</string>
    <string name="Prompts.TouchId.body.android">Tap here to enable fingerprint authentication</string>
    <string name="Prompts.TouchId.title.android">Enable Fingerprint Authentication</string>
    <string name="Prompts.TouchId.usePin.android">PIN</string>
    <string name="Prompts.UpgradePin.body">EACTALK has upgraded to using a 6-digit PIN. Tap here to upgrade.</string>
    <string name="Prompts.UpgradePin.title">Upgrade PIN</string>
    <string name="PushNotifications.body">Turn on notifications to receive special messages from Litewallet in the future.</string>
    <string name="PushNotifications.label">Push Notifications</string>
    <string name="PushNotifications.title">Notifications</string>
    <string name="Receive.copied">Copied to clipboard.</string>
    <string name="Receive.emailButton">Email</string>
    <string name="Receive.request">Request an Amount</string>
    <string name="Receive.share">Share</string>
    <string name="Receive.title">Receive</string>
    <string name="RecoverWallet.done">Done</string>
    <string name="RecoverWallet.header">Recover Wallet</string>
    <string name="RecoverWallet.intro">Recover your EACTALK with your paper key.</string>
    <string name="RecoverWallet.next">Next</string>
    <string name="ReScan.alertAction">Sync</string>
    <string name="ReScan.alertTitle">Sync with Blockchain?</string>
    <string name="ReScan.body1">20-45 minutes</string>
    <string name="ReScan.body2">If a transaction shows as completed on the Earthcoin network but not in your EACTALK.</string>
    <string name="ReScan.body3">You repeatedly get an error saying your transaction was rejected.</string>
    <string name="ReScan.buttonTitle">Start Sync</string>
    <string name="ReScan.footer">You will not be able to send money while syncing with the blockchain.</string>
    <string name="ReScan.subheader1">Estimated time</string>
    <string name="ReScan.subheader2">When to Sync?</string>
    <string name="Search.complete">complete</string>
    <string name="Search.pending">pending</string>
    <string name="Search.received">received</string>
    <string name="Search.sent">sent</string>
    <string name="SecurityCenter.info">Enable all security features for maximum protection.</string>
    <string name="SecurityCenter.paperKeyDescription">The only way to access your Earthcoin if you lose or upgrade your phone.</string>
    <string name="message">Message</string>
    <string name="contact">Address</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="earth_coin_browser">Earthcoin browser</string>
    <string name="close">Close</string>
    <string name="max_storage">Maximum storage(GB)</string>
    <string name="default_node">Default node</string>
    <string name="listen_privacy"><![CDATA[User agreement & Privacy]]></string>
    <string name="delete">Delete</string>
    <string name="input_key_word_one_by_one">Write each word in order and save to a safe place</string>
    <string name="start_recovery">Starting or restoring another account allows you to manage and use a different EACTALK account on this device</string>
    <string name="you_cannot_use_this_eactalk">You can no longer use your current EACTALK account on this device, and all messages and EACs sent or received on this account will remain on the mnemonic.</string>
    <string name="contact_will_remove">The local address book will no longer exist and needs to be added again!</string>
    <string name="you_can_bb">“I disapprove of what you say, But I will defend to the death your right to say it.”</string>
    <string name="you_can_bb_name">-Evelyn Beatrice Hall</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_account_free">Create a new account for free (EAC Wallet)</string>
    <string name="import_account">Import account</string>
    <string name="recovery_account">Restore original account (EAC old wallet)</string>
    <string name="word_7">Word #7</string>
    <string name="input">Please enter</string>
    <string name="notice_message">Announcement message</string>
    <string name="p2p_message">Peer-to-peer message</string>
    <string name="scan_message">Scan QRcode send Message</string>
    <string name="create">New</string>
    <string name="scan_like">Scan QRcode follow</string>
    <string name="copy">Copy</string>
    <string name="select">Choose</string>
    <string name="send_normal_message">Post Peer-to-peer message</string>
    <string name="send_notice_message">Post announcement message</string>
    <string name="send_scan_message">Scan code to send message</string>
    <string name="home">Home</string>
    <string name="publish">Post</string>
    <string name="mine">My</string>
    <string name="node_run_time">Node runtime</string>
    <string name="start">Turn on</string>
    <string name="is_only_wifi">Whether to connect only under WiFi</string>
    <string name="ipfs_path">Storage path</string>
    <string name="default_gateway_http_https">Default gateway (supports http and https)</string>
    <string name="filter_by_eac">Whether to filter content based on EAC</string>
    <string name="show_days">Show days</string>
    <string name="next">Next</string>
    <string name="enter_alias_address">Enter an address or alias to search</string>
    <string name="enter">Enter</string>
</resources>