<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_main_home"
        android:contentDescription="@string/home"
        android:icon="@mipmap/bottom_nav_icon_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_main_message"
        android:contentDescription="@string/message"
        android:icon="@mipmap/bottom_nav_icon_message"
        android:title="@string/message" />
    <item
        android:id="@+id/nav_main_send"
        android:contentDescription="@string/publish"
        android:icon="@mipmap/bottom_nav_icon_send"
        android:title="@string/publish" />
    <item
        android:id="@+id/nav_main_contact"
        android:contentDescription="@string/contact"
        android:icon="@mipmap/bottom_nav_icon_contact"
        android:title="@string/contact" />
    <item
        android:id="@+id/nav_main_mine"
        android:contentDescription="@string/mine"
        android:icon="@mipmap/bottom_nav_icon_mine"
        android:title="@string/mine" />
</menu>
