<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/send_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_normal_message" />

        <Button
            android:id="@+id/send_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_notice_message" />

        <Button
            android:id="@+id/send_qrcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_scan_message" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>